Renamed binary logistic regression fil and added multiclass logistic regression

--- a/Regression/Logistic Regression/Binary Logistic Regression.ipynb
+++ b/Regression/Logistic Regression/Binary Logistic Regression.ipynb
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "f4f8eb5f",
+   "id": "4c2c6ecb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "e96420f3",
+   "id": "6e188c9d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "1cccd7dd",
+   "id": "652aee2b",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +266,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8e700a68",
+   "id": "401df2d9",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "81d9673f",
+   "id": "5ea8e240",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,7 +343,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "c0a7c955",
+   "id": "127c166a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -356,7 +356,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "8261f0a1",
+   "id": "e31543d1",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "826c5a03",
+   "id": "9527cf46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "e353db70",
+   "id": "f61ee591",
    "metadata": {},
    "outputs": [
     {
@@ -416,7 +416,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c0bdaa1b",
+   "id": "d608c8c2",
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "93dc14c7",
+   "id": "19704309",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +746,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "48588613",
+   "id": "72f0c47c",
    "metadata": {},
    "outputs": [
     {
@@ -778,7 +778,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861adcf3",
+   "id": "4e3bb480",
    "metadata": {},
    "source": [
     "##### Hyperparameter tuning and cross validation"
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "f18f33a9",
+   "id": "5bad2014",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +800,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "a5b0f246",
+   "id": "80a82ac5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c48fa9f",
+   "id": "1489978d",
    "metadata": {},
    "source": [
     "GridSearchCV systematically tests different combinations of penalties, solvers, and regularization strengths (C, l1_ratio) for Logistic Regression to find the best-performing model through cross-validation."
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "49f52e27",
+   "id": "bde08107",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "5fa77340",
+   "id": "993b77d4",
    "metadata": {},
    "outputs": [
     {
@@ -871,7 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "8739d8fc",
+   "id": "92f0746b",
    "metadata": {},
    "outputs": [
     {
@@ -1043,7 +1043,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "2de899d0",
+   "id": "d18a5045",
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "3ca816d9",
+   "id": "3cf33961",
    "metadata": {},
    "outputs": [
     {
@@ -1085,7 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "b6db97fe",
+   "id": "3462a546",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1095,7 +1095,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "d75ec696",
+   "id": "0f5a8abd",
    "metadata": {},
    "outputs": [
     {
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "38c41d13",
+   "id": "5530b00a",
    "metadata": {},
    "outputs": [
     {
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "77f6b92d",
+   "id": "ec2ae184",
    "metadata": {},
    "source": [
     "##### Randomized Search CV"
@@ -1162,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "b2fca0d0",
+   "id": "12d6a5a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1172,7 +1172,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "08d86e46",
+   "id": "88c83a3a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1183,7 +1183,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "44020dfe",
+   "id": "b7a88d73",
    "metadata": {},
    "outputs": [
     {
@@ -1285,7 +1285,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "500f4f87",
+   "id": "8f9ae6dc",
    "metadata": {},
    "outputs": [
     {
@@ -1306,7 +1306,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "b54666ab",
+   "id": "8e3e7c6d",
    "metadata": {},
    "outputs": [
     {
@@ -1327,7 +1327,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "ca6d20d7",
+   "id": "daa2e83f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1337,7 +1337,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "85cb1767",
+   "id": "b8dd135d",
    "metadata": {},
    "outputs": [
     {
@@ -1369,11 +1369,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dafca56a",
+   "id": "55adf6fe",
    "metadata": {},
    "source": [
-    "Randomised search takes random parameters and compares which is the best combination. GridsearchCV looks at all the pnc's available. GridsearchCV can be cost"
+    "Randomised search takes random parameters and compares which is the best combination. GridsearchCV looks at all the pnc's available. GridsearchCV can be costly when making lots of parametrs are present. Randomised search is cost effective"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d28d93f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
