--- a/Support Vector Machines/Support Vector Regression Implementation.ipynb
+++ b/Support Vector Machines/Support Vector Regression Implementation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "59e3c143",
+   "id": "901fb709",
    "metadata": {},
    "source": [
     "##### Support Vector Regression Implementation"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "c05bbae8",
+   "id": "e52a9b9c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d22d27a4",
+   "id": "a17ba6b8",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "796a131c",
+   "id": "66c1c7ad",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "779e32ee",
+   "id": "2da5d2a5",
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +184,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "40cb161f",
+   "id": "9ee33e2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ffc4d81e",
+   "id": "9aed5131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "c94127fb",
+   "id": "ebce2543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "31de05c0",
+   "id": "463ea638",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2de39bfa",
+   "id": "de1d146e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "56cd03f6",
+   "id": "ed5716a1",
    "metadata": {},
    "outputs": [
     {
@@ -347,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fb9952e5",
+   "id": "cf20f5e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -359,7 +359,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b628f4d6",
+   "id": "1553b189",
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "07963a3b",
+   "id": "e6d0a360",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "a27f325d",
+   "id": "dee4a172",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "d6662ba8",
+   "id": "5523a066",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "2dad15c2",
+   "id": "2423bfed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -507,7 +507,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "2c61dc72",
+   "id": "2cba0dca",
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +588,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "4ba4580a",
+   "id": "d0c9f664",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "837067cf",
+   "id": "89bf432a",
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "b79ffd34",
+   "id": "1bd8b958",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +634,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "b5886454",
+   "id": "45b9f796",
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1bc58804",
+   "id": "93143a54",
    "metadata": {},
    "source": [
     "#### Hyperparameter tuning\n"
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "692ca4d8",
+   "id": "b70c7b88",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "d1be6aa8",
+   "id": "6177fbb1",
    "metadata": {},
    "outputs": [
     {
@@ -850,8 +850,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "id": "59a4ae33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'C': 100, 'gamma': 0.01, 'kernel': 'rbf'}"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grid.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "58db5412",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prediction = grid.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "0a45b5f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5630727637616444\n",
+      "4.260483973872272\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import r2_score, mean_absolute_error\n",
+    "print(r2_score(y_test,prediction))\n",
+    "print(mean_absolute_error(y_test,prediction))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "5550aeb7",
+   "id": "71e66b2f",
    "metadata": {},
    "outputs": [],
    "source": []
