named entity recognition

--- a/NLP/Named entity recognition.ipynb
+++ b/NLP/Named entity recognition.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e16be76f",
+   "id": "8deca5bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5cce9103",
+   "id": "9e8b131a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f6811507",
+   "id": "d8449d19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6422628c",
+   "id": "f46ad5af",
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "64a7a607",
+   "id": "7a3a50f2",
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "24c5993c",
+   "id": "f6874bfa",
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f9ae90ac",
+   "id": "d8a35f92",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aa3215dd",
+   "id": "a0cec8ff",
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +192,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "089f8e6a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.ne_chunk(tag_elements).draw()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "52c4cd8f",
+   "id": "30452af6",
    "metadata": {},
    "outputs": [],
    "source": []
